Fix gutters on iphone safari

--- a/client/style.css
+++ b/client/style.css
@@ -39,7 +39,6 @@ body {
   color: white;
 }
 #app {
-  margin: 0;
   padding: 0;
 
   font-family: "Quicksand", sans-serif;
@@ -47,13 +46,17 @@ body {
   font-weight: 300;
   border-radius: 0;
   margin: 2px;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 20px;
-  max-width: calc(90vw);
+  max-width: calc(96vw);
+  width: 100%;
+
+  max-width: min(calc(96vw), 800px);
 }
 
 @media screen and (min-width: 600px) {
   #app {
-    margin: 40px;
     border-radius: 10px;
   }
 }
